[package]
name = "playon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = { version = "0.22.9", default-features = false, features = ["libm"] }
playdate-sys = { version = "0.1.10", features = ["entry-point", "bindings-derive-copy", "bindings-derive-eq", "bindings-derive-hash", "bindings-derive-ord", "bindings-derive-partialeq", "bindings-derive-partialord", "bindings-documentation"] }
