[package]
name = "playon"
version = "0.0.0"
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = { version = "0.22.9", default-features = false, features = ["libm"] }
lock_api = { version = "0.4.10", default-features = false }
playdate-sys = { version = "0.1.10", features = ["bindings-derive-copy", "bindings-derive-eq", "bindings-derive-hash", "bindings-derive-ord", "bindings-derive-partialeq", "bindings-derive-partialord", "bindings-documentation"] }
playon-macros = { version = "0.0.*", path = "./playon-macros" }

[workspace]
members = ["playon-macros"]